--- a/package.json
+++ b/package.json
@@ -4,126 +4,12 @@
   "description": "Proyecto ambicion total Naviera",
   "main": "main.js",
   "dependencies": {
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
-    "boolean": "^3.2.0",
-    "browserslist": "^4.25.1",
-    "buffer-crc32": "^0.2.13",
-    "cacheable-lookup": "^5.0.4",
-    "cacheable-request": "^7.0.4",
-    "caniuse-lite": "^1.0.30001726",
-    "chalk": "^4.1.2",
-    "cliui": "^8.0.1",
-    "clone-response": "^1.0.3",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
     "concurrently": "^9.2.0",
-    "convert-source-map": "^2.0.0",
     "cross-env": "^7.0.3",
-    "cross-spawn": "^7.0.6",
-    "csstype": "^3.1.3",
-    "debug": "^4.4.1",
-    "decompress-response": "^6.0.0",
-    "defer-to-connect": "^2.0.1",
-    "define-data-property": "^1.1.4",
-    "define-properties": "^1.2.1",
-    "detect-node": "^2.1.0",
-    "electro": "^2.1.1",
-    "electron-to-chromium": "^1.5.177",
-    "emoji-regex": "^8.0.0",
-    "end-of-stream": "^1.4.5",
-    "env-paths": "^2.2.1",
-    "es-define-property": "^1.0.1",
-    "es-errors": "^1.3.0",
-    "es6-error": "^4.1.1",
-    "esbuild": "^0.25.5",
-    "escalade": "^3.2.0",
-    "escape-string-regexp": "^4.0.0",
-    "extract-zip": "^2.0.1",
-    "fd-slicer": "^1.1.0",
-    "fdir": "^6.4.6",
-    "fs-extra": "^8.1.0",
-    "gensync": "^1.0.0-beta.2",
-    "get-caller-file": "^2.0.5",
-    "get-stream": "^5.2.0",
-    "global-agent": "^3.0.0",
-    "globals": "^11.12.0",
-    "globalthis": "^1.0.4",
-    "gopd": "^1.2.0",
-    "got": "^11.8.6",
-    "graceful-fs": "^4.2.11",
-    "has-flag": "^4.0.0",
-    "has-property-descriptors": "^1.0.2",
-    "http-cache-semantics": "^4.2.0",
-    "http2-wrapper": "^1.0.3",
-    "is-fullwidth-code-point": "^3.0.0",
-    "isexe": "^2.0.0",
-    "js-tokens": "^4.0.0",
-    "jsesc": "^3.1.0",
-    "json-buffer": "^3.0.1",
-    "json-stringify-safe": "^5.0.1",
-    "json5": "^2.2.3",
-    "jsonfile": "^4.0.0",
-    "keyv": "^4.5.4",
-    "lodash": "^4.17.21",
-    "lowercase-keys": "^2.0.0",
-    "lru-cache": "^5.1.1",
-    "matcher": "^3.0.0",
-    "mimic-response": "^1.0.1",
-    "ms": "^2.1.3",
-    "nanoid": "^3.3.11",
-    "node-releases": "^2.0.19",
-    "normalize-url": "^6.1.0",
-    "object-keys": "^1.1.1",
-    "once": "^1.4.0",
-    "p-cancelable": "^2.1.1",
-    "path-key": "^3.1.1",
-    "pend": "^1.2.0",
-    "picocolors": "^1.1.1",
-    "picomatch": "^4.0.2",
-    "postcss": "^8.5.6",
-    "progress": "^2.0.3",
-    "pump": "^3.0.3",
-    "quick-lru": "^5.1.1",
+    "electron": "^29.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-refresh": "^0.17.0",
-    "require-directory": "^2.1.1",
-    "resolve-alpn": "^1.2.1",
-    "responselike": "^2.0.1",
-    "roarr": "^2.15.4",
-    "rollup": "^4.44.1",
-    "rxjs": "^7.8.2",
-    "scheduler": "^0.26.0",
-    "semver": "^6.3.1",
-    "semver-compare": "^1.0.0",
-    "serialize-error": "^7.0.1",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "shell-quote": "^1.8.3",
-    "source-map-js": "^1.2.1",
-    "sprintf-js": "^1.1.3",
-    "string-width": "^4.2.3",
-    "strip-ansi": "^6.0.1",
-    "sumchecker": "^3.0.1",
-    "supports-color": "^8.1.1",
-    "tinyglobby": "^0.2.14",
-    "tree-kill": "^1.2.2",
-    "tslib": "^2.8.1",
-    "type-fest": "^0.13.1",
-    "typescript": "^5.8.3",
-    "undici-types": "^6.21.0",
-    "universalify": "^0.1.2",
-    "update-browserslist-db": "^1.1.3",
-    "vite": "^7.0.0",
-    "which": "^2.0.2",
-    "wrap-ansi": "^7.0.0",
-    "wrappy": "^1.0.2",
-    "y18n": "^5.0.8",
-    "yallist": "^3.1.1",
-    "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1",
-    "yauzl": "^2.10.0"
+    "vite": "^7.0.0"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development concurrently \"vite\" \"electron .\"",
@@ -142,6 +28,7 @@
   },
   "homepage": "https://github.com/L34N07/PATNav#readme",
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.6.0"
+    "@vitejs/plugin-react": "^4.6.0",
+    "typescript": "^5.8.3"
   }
 }
