--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vite": "^7.0.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development concurrently \"vite\" \"electron .\"",
+    "dev": "cross-env NODE_ENV=development concurrently -k \"vite\" \"electron .\"",
     "build": "vite build",
     "start": "cross-env NODE_ENV=production electron ."
   },
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/L34N07/PATNav#readme",
   "devDependencies": {
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "typescript": "^5.8.3"
   }
