--- a/package.json
+++ b/package.json
@@ -15,15 +15,42 @@
     "dev": "cross-env NODE_ENV=development concurrently -k \"vite\" \"electron .\"",
     "build": "vite build",
     "start": "cross-env NODE_ENV=production electron .",
-    "dist": "electron-builder"
+    "dist": "npm run build && electron-builder"
   },
-  "build":{
+  "build": {
     "appId": "com.l34n07.navieraapp",
     "productName": "Naviera App",
-    "win":{
-      "target": "portable"
+    "directories": {
+      "buildResources": "public"
+    },
+      "files": [
+        "dist/**/*",
+        "main.js",
+        "preload.js",
+        "script.py",
+        "package.json",
+        "public/**/*",
+        "src/assets/**/*"
+      ],
+      "asarUnpack": [
+        "script.py"
+      ],
+    "extraResources": [
+      {
+        "from": "public/fonts",
+        "to": "fonts",
+        "filter": ["**/*"]
+      }
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "public/logo.ico"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "src/assets/logopng.png"
     }
-    
+
   },
   "repository": {
     "type": "git",
