--- a/package.json
+++ b/package.json
@@ -23,23 +23,25 @@
     "directories": {
       "buildResources": "public"
     },
-      "files": [
-        "dist/**/*",
-        "main.js",
-        "preload.js",
-        "script.py",
-        "package.json",
-        "public/**/*",
-        "src/assets/**/*"
-      ],
-      "asarUnpack": [
-        "script.py"
-      ],
+    "files": [
+      "dist/**/*",
+      "main.js",
+      "preload.js",
+      "script.py",
+      "package.json",
+      "public/**/*",
+      "src/assets/**/*"
+    ],
+    "asarUnpack": [
+      "script.py"
+    ],
     "extraResources": [
       {
         "from": "public/fonts",
         "to": "fonts",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "win": {
@@ -50,7 +52,6 @@
       "target": "AppImage",
       "icon": "src/assets/logopng.png"
     }
-
   },
   "repository": {
     "type": "git",
@@ -64,10 +65,11 @@
   },
   "homepage": "https://github.com/L34N07/PATNav#readme",
   "devDependencies": {
-    "electron": "^29.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "electron": "^38.1.2",
+    "electron-builder": "^26.0.12",
     "typescript": "^5.8.3"
   }
 }
