--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev": "cross-env NODE_ENV=development concurrently -k \"vite\" \"electron .\"",
     "build": "vite build",
     "start": "cross-env NODE_ENV=production electron .",
-    "dist": "npm run build && electron-builder"
+    "dist": "npm run build && electron-builder",
+    "build:python": "python -m PyInstaller --onefile --clean --distpath release --workpath build --specpath build script.py"
   },
   "build": {
     "appId": "com.l34n07.navieraapp",
@@ -38,6 +39,10 @@
         "filter": [
           "**/*"
         ]
+      },
+      {
+        "from": "release/script.exe",
+        "to": "script.exe"
       }
     ],
     "win": {
